# Mythic-RDT

./: .gitignore  BASE_DEEPSEEK_CODER_V2_LITE.md  BASE_GEMMA4_98E_V3.md  BASE_MODEL_ANALYSIS.md  CALIBER_LEARNINGS.md  CLAUDE.md  MASTER_PLAN.md  README.md  SETUP.md  STATUS.md  environment.yml  pyproject.toml  requirements-train.txt  requirements.txt
.claude/: settings.json
.claude/hooks/: caliber-check-sync.sh  caliber-session-freshness.sh
.claude/rules/: conversion-scripts.md  eval-rules.md  modeling-shape.md
.wolf/: anatomy.md  buglog.json  cerebrum.md  config.json  identity.md  memory.md  suggestions.json
eval_results/: baseline_lcb30_local.json  humaneval_v3_t1_ckpt400.json  humaneval_v4_anchored_ckpt400_cached.json  local_3090_wrapper_only_lcb10.json  perprob_lcb30_local_t1.json  probe1_v3t1_lcb10.json  probe2_bypass_lcb10.json  probe3_shrunk5_lcb10.json  v4_anchored_ckpt400_v3final.json  v4_t1_lcb_bs1.json  v4_t1_lcb_bs4_patched.json  v4_t1_lcb_nocache.json  v5_he20.json  v5_lcb10.json  v6a_ckpt100_lcb30_local.json  v6a_he20.json  v6a_lcb30_local_v6e_fix.json  v6a_lcb30_local_v6e_fix_T24.json  v6a_lcb30_pod.json  v6a_untrained_lcb10.json
pod_wandb/: latest-run
results/: humaneval_smoke_chat5_v3.json  phase0_probe_v2.json  phase1_smoke_v3_manifest.json
scripts/: 06_train_sft_recurrence.py  _diag_chat_decode.py  _diag_minimal_gen.py  _diag_tokenizer.py  _dscoder_compat.py  _probe_v6e_identity.py  _probe_wrapper_generate.py  _probe_wrapper_generate_lcb.py  finetune_phase1.py  humaneval_smoke.py  measure_base_loss.py  phase0_probe_layers.py  phase0_sanity.py  precompute_xv_sft_cache.py  setup_pod_env.sh
tests/: test_first_iter_identity.py  test_load_trainable_state.py  test_recurrence.py
(+99 files in other folders)
